force-app/main/default/objects/Participant_PrescreenerResponse__c/Participant_PrescreenerResponse__c.object-meta.xml
<CustomObject>
    <label>Participant Screener Response</label>
    <nameField>
        <displayFormat>PPR-{0000}</displayFormat>
        <label>Participant_PrescreenerResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Screener Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>