force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Prescreener Responses (Completed by)</relationshipLabel>
    <relationshipName>Participant_Prescreener_Responses1</relationshipName>
    <type>Lookup</type>
</CustomField>