force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>