force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRR</label>
    <type>Checkbox</type>
</CustomField>