force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/MRR_EPR__c.field-meta.xml
<CustomField>
    <fullName>MRR_EPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPR</label>
    <type>Checkbox</type>
</CustomField>