force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipName>Participant_PrescreenerResponses</relationshipName>
    <type>Lookup</type>
</CustomField>