force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/Participant_enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant_enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipName>Participant_PrescreenerResponses</relationshipName>
    <type>Lookup</type>
</CustomField>