force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/Prescreener__c.field-meta.xml
<CustomField>
    <fullName>Prescreener__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prescreener</label>
    <type>Checkbox</type>
</CustomField>