force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/PreScreener_Survey__c.field-meta.xml
<CustomField>
    <fullName>PreScreener_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screener</label>
    <referenceTo>PreScreener_Survey__c</referenceTo>
    <relationshipName>Participant_PrescreenerResponses</relationshipName>
    <type>Lookup</type>
</CustomField>