force-app/main/default/objects/Participant_PrescreenerResponse__c/fields/Screener_Response__c.field-meta.xml
<CustomField>
    <fullName>Screener_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Screener Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>